# procenv

./: .gitignore  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: ci.yml
crates/procenv/: Cargo.toml
crates/procenv/benches/: config_loading.rs
crates/procenv/data/: .env.source_test  config.toml  error_demo.toml  hot_reload.toml
crates/procenv/examples/: basic.rs  custom_provider.rs  dotenv_example.rs  env_example_gen.rs  error_demo.rs  file_config.rs  file_config_sketch.rs  flatten_example.rs  hot_reload.rs  prefix_example.rs  runtime_access.rs  secrecy_example.rs  source_attribution.rs  source_attribution_dotenv.rs  test_type_mismatch.rs  validator_example.rs
crates/procenv/src/: error.rs  file.rs  lib.rs  loader.rs  source.rs  validation.rs  value.rs
crates/procenv/src/file/: builder.rs  error.rs  format.rs  mod.rs  origin.rs  utils.rs
crates/procenv/src/provider/: adapter.rs  dotenv.rs  env.rs  file.rs  mod.rs
crates/procenv/src/watch/: builder.rs  container.rs  handle.rs  mod.rs  types.rs  watcher.rs
crates/procenv/tests/: cli_tests.rs  concurrency_tests.rs  edge_cases.rs  error_quality.rs  file_formats.rs  integration.rs  malformed_files.rs  nested_complex.rs  profile_tests.rs  property_tests.rs  provider.rs  runtime_access.rs  trybuild.rs  validation.rs  watch_tests.rs
crates/procenv/tests/compile_pass/: profile_support.rs
crates/procenv/tests/fixtures/: missing_field.json  nested_error.toml  type_error.json  type_error.toml  valid.toml
crates/procenv_macro/: Cargo.toml
crates/procenv_macro/src/: expand.rs  field.rs  lib.rs  parse.rs
crates/procenv_macro/src/expand/: args.rs  config.rs  debug.rs  env.rs  example.rs  mod.rs  runtime.rs  sources.rs  validation.rs
crates/procenv_macro/src/field/: default.rs  flatten.rs  mod.rs  optional.rs  required.rs  secret.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_value.rs  fuzz_file_utils.rs  fuzz_json_parsing.rs  fuzz_maybe_redacted.rs  fuzz_toml_parsing.rs  fuzz_yaml_parsing.rs
