[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
# Proc-macro dependencies
syn = { version = "2.0.111", features = ["full", "parsing", "extra-traits"] }
quote = "1.0.42"
proc-macro2 = "1.0.103"

# Error handling
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"

# High value additions
secrecy = { version = "0.10.3", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
validator = { version = "0.20.0", features = ["derive"] }

serde-saphyr = "0.0.10"
tracing = "0.1.43"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = { version = "0.1.20" }
serde_json = "1.0.145"
toml = "0.9.8"
