[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.7"
edition = "2024"
rust-version = "1.91.1"

[workspace.dependencies]
syn = { version = "2.0.111", features = ["full", "parsing", "extra-traits"] }
quote = "1.0.42"
proc-macro2 = "1.0.103"

miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"

secrecy = { version = "0.10.3", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
validator = { version = "0.20.0", features = ["derive"] }

serde-saphyr = "0.0.10"
tracing = "0.1.43"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = { version = "0.1.20" }
serde_json = "1.0.145"
toml = "0.9.8"
tokio = { version = "1.48.0", features = ["rt"] }
futures = { version = "0.3.31" }
divan = { version = "0.1.21" }
num-traits = { version = "0.2.19" }

# Hot reload (Phase E)
notify = { version = "8.2.0", default-features = false, features = [
	"macos_fsevent",
] }
parking_lot = "0.12.5"
crossbeam-channel = "0.5.15"

# =============================================================================
# Build Profiles
# =============================================================================

# Development profile
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

# Optimize dependencies even in dev mode for faster runtime
# (dependencies rarely change, so this doesn't hurt incremental builds)
[profile.dev.package."*"]
opt-level = 2

# Release profile: optimize for runtime performance
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
strip = "symbols"

# Test profile: Inherit from dev but some optimizations
# Helps tests that do heavy computation run faster
[profile.test]
inherits = "dev"
opt-level = 1
debug = true

# Bench profile: maximum performance for accurate benchmarks
[profile.bench]
inherits = "release"
debug = false
lto = "fat"          # Maximum LTO for benchmarks
codegen-units = 1

# Proc-macro crate optimization (faster macro expansion during dev)
[profile.dev.package.procenv_macro]
opt-level = 2

[profile.dev.package.syn]
opt-level = 2

[profile.dev.package.quote]
opt-level = 2

[profile.dev.package.proc-macro2]
opt-level = 2
