[package]
name = "procenv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
description = "Derive macro for declarative environment variable configuration with error accumulation and rich diagnostics"
repository = "https://github.com/consistent-milk12/procenv"
readme = "../../README.md"
keywords = ["env", "config", "macro", "derive", "environment"]
categories = ["config", "development-tools::procedural-macro-helpers"]

[features]
default = ["secrecy", "dotenv", "file-all", "clap"]
# Enable secrecy::Secret<T> support for secret fields
secrecy = ["dep:secrecy"]
# Enable clap integration for CLI + env config
clap = ["dep:clap"]
# Enable validation attributes
validator = ["dep:validator"]
# Enable .env file loading (Phase 9)
dotenv = ["dep:dotenvy"]
# Enable serde serialization for config structs
serde = ["dep:serde", "dep:serde_json"]
# Enable tracing instrumentation
tracing = ["dep:tracing"]

async = ["provider", "dep:tokio", "dep:futures"]
provider = []

# File format support (Phase 13)
# Enable file-based configuration loading
file = ["dep:serde", "dep:serde_json", "dep:serde_path_to_error"]
# Enable TOML file support
toml = ["file", "dep:toml"]
# Enable YAML file support (uses serde-saphyr, the modern serde_yaml replacement)
yaml = ["file", "dep:serde-saphyr"]
# Enable JSON file support (included in file feature)
json = ["file"]
# Enable all file formats
file-all = ["toml", "yaml", "json"]

# Enable all features
full = [
	"secrecy",
	"clap",
	"validator",
	"dotenv",
	"serde",
	"tracing",
	"file-all",
	"provider",
]

[dependencies]
procenv_macro = { version = "0.1.6", path = "../procenv_macro" }
miette = { workspace = true }
thiserror = { workspace = true }

secrecy = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

dotenvy = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_path_to_error = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

toml = { workspace = true, optional = true }
serde-saphyr = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

validator = { workspace = true, optional = true }
num-traits = { workspace = true }

[dev-dependencies]
trybuild = "1.0.114"
serial_test = "3.2.0"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde-saphyr = { workspace = true }
clap = { workspace = true }
divan = { workspace = true }

[[example]]
name = "file_config"
required-features = ["file-all"]

[[example]]
name = "validator_example"
required-features = ["validator"]

[[example]]
name = "custom_provider"
required-features = ["provider"]

[[bench]]
name = "config_loading"
harness = false
