[package]
name = "procenv_macro"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Procedural macro implementation for procenv"
repository = "https://github.com/consistent-milk12/procenv"
keywords = ["env", "config", "macro", "derive", "environment"]
categories = ["config", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
